--- a/pay-ui/src/app/payment/payment.component.html
+++ b/pay-ui/src/app/payment/payment.component.html
@@ -1,32 +1,103 @@
 <p-growl [(value)]="msgs"></p-growl>
 <p-dialog header="Title" [(visible)]="display">
     Payment Successful.
-
     <button class="btn btn-primary" type="button" (click)="gotoProfile()">OK</button>
-
-
 </p-dialog>
 
-<form class="form-horizontal" novalidate (ngSubmit)="pay()" [formGroup]="formGroup">
+<div class="col-md-6 col-md-offset-3">
+    <div class="panel panel-login">
+        <div class="panel-heading">
+            <div class="row">
+                <div class="col-xs-12">
+                    <a class="active">Payment</a>
+                </div>
 
-    <!-- Name:
-    <div>
-        <input type="text" formControlName="cardName">
-    </div> -->
+            </div>
+            <hr>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <form class="form-horizontal" novalidate (ngSubmit)="pay()" [formGroup]="formGroup">
+                        <fieldset>
 
 
-    <br><br> Name:
-    <div>
-        <input type="text" formControlName="cardName">
+ <div class="form-group" [ngClass]="{'has-error': (formGroup.get('amount').touched || formGroup.get('amount').dirty) && !formGroup.get('amount').valid }">
+                                <label class="col-md-4 control-label" for="amount">amount</label>
+
+                                <div class="col-md-7">
+                                    <input class="form-control" id="amount" type="number" placeholder="Enter Amount (required)" formControlName="amount" />
+
+                                </div>
+                            </div>
+
+<br><br>
+
+
+                            <div class="form-group" [ngClass]="{'has-error': (formGroup.get('cardName').touched || formGroup.get('cardName').dirty) && !formGroup.get('cardName').valid }">
+                                <label class="col-md-4 control-label" for="cardName">Name</label>
+
+                                <div class="col-md-7">
+                                    <input class="form-control" id="cardName" type="text" placeholder="Name on the card (required)" formControlName="cardName" />
+
+                                </div>
+                            </div>
+
+
+                            <div class="form-group" [ngClass]="{'has-error': (formGroup.get('creditCard').touched || formGroup.get('creditCard').dirty) && !formGroup.get('creditCard').valid }">
+                                <label class="col-md-4 control-label" for="creditCard">Card Number</label>
+
+                                <div class="col-md-7">
+                                    <input class="form-control" id="cc-number" formControlName="creditCard" type="tel" autocomplete="cc-number" ccNumber maxlength="19" placeholder="**** **** **** ****" />
+
+                                </div>
+                            </div>
+
+
+
+                            <div class="form-group" [ngClass]="{'has-error': (formGroup.get('expirationDate').touched || formGroup.get('expirationDate').dirty) && !formGroup.get('expirationDate').valid }">
+                                <label class="col-md-4 control-label" for="cc-exp-date">Expiry</label>
+
+                                <div class="col-md-7">
+                                    <input class="form-control" id="cc-exp-date" formControlName="expirationDate" type="tel" autocomplete="cc-exp" ccExp placeholder="MM/YYYY" />
+
+                                </div>
+                            </div>
+
+
+
+
+
+
+                            <div class="form-group" [ngClass]="{'has-error': (formGroup.get('cvc').touched || formGroup.get('cvc').dirty) && !formGroup.get('cvc').valid }">
+                                <label class="col-md-4 control-label" for="cc-cvc">CVC</label>
+
+                                <div class="col-md-7">
+                                    <input class="form-control" id="cc-cvc" formControlName="cvc" type="tel" autocomplete="off" ccCvc placeholder="***" />
+
+                                </div>
+                            </div>
+
+
+
+                            <div class="form-group">
+                                <div class="col-md-4 col-md-offset-4">
+                                    <span>
+                            <button class="btn btn-primary"
+                                    type="submit"
+                                    [disabled]="!formGroup.valid">
+                                Pay {{formGroup.value.amount?"$":""}}{{formGroup.value.amount}}
+                            </button>
+                        </span>
+
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+
+                </div>
+            </div>
+        </div>
     </div>
-
-
-    <input id="cc-number" formControlName="creditCard" type="tel" autocomplete="cc-number" ccNumber maxlength="19" placeholder="**** **** **** ****">
-    <input id="cc-exp-date" formControlName="expirationDate" type="tel" autocomplete="cc-exp" ccExp placeholder="MM/YYYY">
-    <input id="cc-cvc" formControlName="cvc" type="tel" autocomplete="off" ccCvc placeholder="***">
-    <!-- <br> CVC: <input type="tel" type="tel" autocomplete="cc-cvc" id="cc-csc" ccCvc> -->
-    <br><br>
-
-    <button class="btn btn-primary" type="submit">PAY</button>
-
-</form>
+</div>
