--- a/pay-ui/src/styles.css
+++ b/pay-ui/src/styles.css
@@ -92,7 +92,7 @@ body {
 .panel-login input:hover,
 .panel-login input:focus {
     outline: none;
-    app -webkit-box-shadow: none;
+    -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
     border-color: #ccc;
